feat(#517): RSR-1249 ControlBlock id should be 14 alphanumeric characters
Signed-off-by: massifben <105049157+massifben@users.noreply.github.com>